<resources>
    <string name="app_name">Gratimeter</string>
    <string name="arq_habib_bujana">Arq. Habib Bujana</string>
    <string name="ser_agradecido_es_un_estilo_de_vida">"Been grateful is a lifestyle"</string>
    <string name="title_string">The only one tool that allow be free from complains and be powerful on the gratitude</string>
    <string name="by_arq_habib_bujana">By Arq. Habib Bujana</string>
    <string name="in">Start</string>
    <string name="thanks">Thanks</string>
    <string name="people_environment">People / Environment</string>
    <string name="to_me">To me</string>
    <string name="god">God</string>
    <string name="agradecer">Thank</string>
    <string name="club">Club</string>
    <string name="calificar">Qualify</string>
    <string name="m_s_aplicaciones">More Applications</string>
    <string name="sugerencias">Suggestions</string>
    <string name="contacto">Contact</string>
    <string name="men_de_configuraci_n">Configuration Menu</string>
    <string name="sonido">Sound</string>
    <string name="vibraci_n">Vibration</string>
    <string name="correo">Email</string>
    <string name="puedes_contactarnos_a_trav_s_de">You can contact us by:</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="llamada">Phone Call</string>
    <string name="introduce_una_gratitud">Introduce a gratitude</string>
    <string name="cancelar">Cancel</string>
    <string name="hola_para_continuar_por_favor_introduce_tus_datos">Hello, please introduce your information.</string>
    <string name="nombre">First Name</string>
    <string name="apellido">Last Name</string>
    <string name="correo_electronico">E-mail</string>
    <string name="aceptar">Accept</string>
    <string name="me0">Been grateful speaks good of the heart and make your heart been able to talk</string>
    <string name="salir">Exit</string>
    <string name="tu_opini_n_es_primordial_para_nosotros_y_tus_sugerencias_son_importantes_muchas_gracias">Your opinion is important for us, thank you very much.</string>
    <string name="introduce_una_sugerencia">Introduce a suggestion</string>
    <string name="send">Send</string>
    <string name="all">All</string>
    <string name="date">Date</string>
    <string name="no_records">There are no records of this day</string>
    <string name="select_date">Select Date</string>
    <string name="select_type">Select Type</string>
    <string name="hello">Hello</string>
    <string name="whom_would_you_like">Whom would you like to thank in this moment?</string>
    <string name="what_would_you_like">What would you like to thank to </string>
    <string name="to_god">God?</string>
    <string name="to_other_people">people or environment?</string>
    <string name="to_yourself">yourself?</string>
    <string name="remember_to_thank">Remember to thank</string>
    <string name="channel_name">chgr01</string>
    <string name="channel_description">Gratimeter Notifications</string>
    <string name="would_you_like_to_thank_in_this_moment">¿Would you like to thank right now?</string>
    <string name="share">Share</string>
    <string name="configuration">Configuration</string>
    <string name="notification">Notifications</string>
    <string name="me1">If you have trouble giving thanks, it will also cost you to do something for others.</string>
    <string name="me2">Silent gratitude serves no one.</string>
    <string name="me3">When gratitude is so absolute, words remain.</string>
    <string name="me4">Gratitude is a flower that springs from the soul</string>
    <string name="me5">Gratitude is the memory of the heart.</string>
    <string name="me6">The most sincere gratitude comes from humility itself.</string>
</resources>
