<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/logo_gratimetro"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/hands"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />
        </LinearLayout>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/tu_opini_n_es_primordial_para_nosotros_y_tus_sugerencias_son_importantes_muchas_gracias"
            android:padding="10dp"
            android:textStyle="italic"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/introduce_una_sugerencia"
            android:inputType="textMultiLine"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:gravity="start"
            android:textColorHint="#888"
            android:textSize="18sp"
            android:id="@+id/et_name"
            android:background="@drawable/et_primary_white"
            tools:ignore="Autofill" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:textSize="18sp"
                android:id="@+id/bt_cancel"
                style="@style/Widget.AppCompat.Button.Colored"
                />
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:id="@+id/bt_accept"
                android:textSize="18sp"
                style="@style/Widget.AppCompat.Button.Colored"
                />
        </LinearLayout>




    </LinearLayout>

</ScrollView>