<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/logo_gratimetro"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/hands"
                android:layout_gravity="center"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/men_de_configuraci_n"
            android:textStyle="bold|italic"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:padding="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <android.support.v7.widget.SwitchCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sonido"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/sw_s"
                android:checked="true"
                />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vibraci_n"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:id="@+id/sw_v"
                android:checked="true"
                />
        </LinearLayout>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/sw_n"
            android:checked="true"
            />

    </LinearLayout>

</ScrollView>