<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoricActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:id="@+id/ll_header"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_type"
            android:textSize="20sp"
            android:padding="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp" />


        <TextView
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_date"
            android:textSize="20sp"
            android:padding="5dp"
            />

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:background="@drawable/et_primary"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                >

                <Spinner
                    android:id="@+id/sp_items"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    tools:listitem="@layout/support_simple_spinner_dropdown_item"
                    android:entries="@array/list_views" />
            </LinearLayout>
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:background="@drawable/et_primary"
                android:padding="5dp"
                android:textSize="20sp"
                android:text="@string/date"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:id="@+id/tv_date"
                />
        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rv"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_records"
            android:gravity="center"
            android:padding="5dp"
            android:textSize="20sp"
            android:id="@+id/tv_no_records"
            />
    </LinearLayout>

</ScrollView>