<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageView
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:background="@drawable/logo_gratimetro"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/hands"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puedes_contactarnos_a_trav_s_de"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            />

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:layout_margin="10dp"
           android:id="@+id/ll_wh"
           tools:ignore="UseCompoundDrawables">
           <ImageView
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:background="@drawable/whatsapp"
               tools:ignore="ContentDescription" />
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/whatsapp"
               android:textStyle="bold"
               android:padding="10dp"
               android:textSize="20sp"
               android:textColor="@color/black"
               />
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/ll_email"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/correo"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/ll_call"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/phonereceiver"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/llamada"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/arq_habib_bujana"
            android:gravity="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:padding="10dp"
            android:textColor="@color/black"
            />

    </LinearLayout>

</ScrollView>