<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_blue"
    tools:context=".SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:background="@drawable/logo_gratimetro"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:id="@+id/title"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/title_string"
            android:textSize="20sp"
            android:padding="5dp"
            android:textStyle="bold|italic"
            android:gravity="center"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gratimetrosplash"
            android:id="@+id/iv"
            android:layout_margin="20dp"
            android:layout_marginBottom="20dp"
            tools:ignore="ContentDescription" />


        <ImageView
            android:layout_width="290dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@drawable/ser_agradecido"
            android:layout_marginBottom="20dp"
            tools:ignore="ContentDescription" />

        <Button
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:text="@string/in"
            android:textSize="18sp"
            android:padding="5dp"
            android:layout_gravity="center"
            android:background="@drawable/bt_yellow"
            android:id="@+id/bt"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/by_arq_habib_bujana"
            android:background="@drawable/bg_red"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="right|end"
            android:layout_marginEnd="20dp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>



</ScrollView>