<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           tools:ignore="DisableBaselineAlignment">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:gravity="center"
               android:paddingTop="20dp"
               android:id="@+id/bt_gratitude"
               android:layout_margin="5dp"
               android:background="@color/red"
               android:orientation="vertical"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/hands"
                   android:layout_marginBottom="20dp"
                   tools:ignore="ContentDescription" />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="@string/agradecer"
                   android:textAllCaps="true"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:padding="5dp"
                   android:gravity="center"
                   android:background="@drawable/black_bg"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:gravity="center"
               android:paddingTop="20dp"
               android:layout_margin="5dp"
               android:id="@+id/bt_clubs"
               android:background="@color/green"
               android:orientation="vertical"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/teamworkg"
                   android:layout_marginBottom="20dp"
                   tools:ignore="ContentDescription" />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="@string/club"
                   android:textAllCaps="true"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:padding="5dp"
                   android:gravity="center"
                   android:background="@drawable/black_bg"
                   />
           </LinearLayout>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:gravity="center"
           tools:ignore="DisableBaselineAlignment">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:gravity="center"
               android:paddingTop="20dp"
               android:layout_margin="5dp"
               android:id="@+id/bt_qualify"
               android:background="@color/colorPrimary"
               android:orientation="vertical"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/favorite"
                   android:layout_marginBottom="20dp"
                   tools:ignore="ContentDescription" />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="@string/calificar"
                   android:textAllCaps="true"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:padding="5dp"
                   android:gravity="center"
                   android:background="@drawable/black_bg"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:gravity="center"
               android:paddingTop="20dp"
               android:layout_margin="5dp"
               android:id="@+id/bt_apps"
               android:background="@color/colorAccent"
               android:orientation="vertical"
               android:layout_height="wrap_content">

               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/play_store"
                   android:layout_marginBottom="20dp"
                   tools:ignore="ContentDescription" />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="@string/m_s_aplicaciones"
                   android:textAllCaps="true"
                   android:textStyle="bold"
                   android:textSize="19sp"
                   android:padding="5dp"
                   android:gravity="center"
                   android:background="@drawable/black_bg"
                   />
           </LinearLayout>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           tools:ignore="DisableBaselineAlignment">
           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:gravity="center"
               android:paddingTop="20dp"
               android:id="@+id/bt_sugerences"
               android:layout_margin="5dp"
               android:background="#333"
               android:orientation="vertical"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/email"
                   android:layout_marginBottom="20dp"
                   tools:ignore="ContentDescription" />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="@string/sugerencias"
                   android:textAllCaps="true"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:padding="5dp"
                   android:gravity="center"
                   android:background="@drawable/black_bg"
                   />
           </LinearLayout>
           <LinearLayout
               android:layout_width="0dp"
               android:layout_weight="1"
               android:gravity="center"
               android:paddingTop="20dp"
               android:layout_margin="5dp"
               android:id="@+id/bt_configuration"
               android:background="#ccc"
               android:orientation="vertical"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/phonebook"
                   android:layout_marginBottom="20dp"
                   tools:ignore="ContentDescription" />
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textColor="@color/white"
                   android:text="@string/contacto"
                   android:textAllCaps="true"
                   android:textStyle="bold"
                   android:textSize="20sp"
                   android:padding="5dp"
                   android:gravity="center"
                   android:background="@drawable/black_bg"
                   />
           </LinearLayout>
       </LinearLayout>

   </LinearLayout>



</ScrollView>